# codex-vscode

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  mkdocs.yml  noxfile.py  pyproject.toml  zensical.toml
.devcontainer/: Dockerfile
.github/workflows/: docs.yml  mkdocs.yml  pre-commit.yml  pytest.yml  sphinx.yml  zensical.yml
.nox/: README.md
containers/apptainer/: README.md  core.def  miniconda.def
docs/: README.md
docs/01_quickstart/: index.md
docs/02_learn/: concepts.md  examples.md  faq.md  index.md  troubleshooting.md
docs/03_dev/: git.md  index.md  remote.md  troubleshoot.md  typer.md  vscodium.md
docs/03_dev/test/: cicd.md  index.md  nox.md  pytest.md
docs/04_references/: api.md  index.md  markdown.md  zensical.md
docs/05_about/: authors.md  index.md
docs/about/: author.md  authors.md
docs/dev/: cicd.md  git.md  index.md  main.md  note.md  nox.md  precommit.md  remote.md  test.md  troubleshoot.md  typer.md  version.md  vscode.md
docs/dev/test/: cicd.md  nox.md  pytest.md  report.md
docs/learn/: basics.md  concepts.md  examples.md  faq.md  index.md  main.md  troubleshooting.md
docs/quickstart/: index.md  install.md
docs/references/: api.md  index.md  mkdocs.md  zensical.md
docs/source/: conf.py  index.rst
docs/source/pages/: installation.rst
docs/tests/: pytest.md
src/: main.py
src/log/: logger.py
tests/: basic_test.py  cli_test.py  utils.py
