[project]
name = "myproject"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
authors = ["DestinV <peddky8e@duck.com>"]
license = "MIT"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
logging = ["loguru", "rich", "typer"]
cicd = ["black", "mypy", "nox", "pre-commit"]
math = ["numpy", "pandas"]
sphinx = [
    "myst-parser",
    "pydata-sphinx-theme",
    "sphinx-book-theme",
    "sphinx-design",
]
pytest = [
    "allure-pytest",
    "pytest",
    "pytest-clarity",
    "pytest-cov",
    "pytest-html",
    "pytest-memray",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
    /(
        \.eggs
      | \.git
      | \.mypy_cache
      | \.pytest_cache
      | \.venv
      | \.vscode
      | \.nox
      | \docs
      # The following are specific to Black, you probably don't want those.
      | blib2to3
      | tests/data
      | profiling
    )/
    '''

[tool.coverage.report]
exclude_also = [
    "noxfile.py",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.isort]
profile = "black"
force_single_line = "true"
