[project]
name = "myproject"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
authors = ["DestinV <peddky8e@duck.com>"]
license = "MIT"
readme = "README.md"
dependencies = [
    "loguru", 
    "rich",
    "typer",
]

[project.optional-dependencies]
math = ["numpy"]

[dependency-groups]
dev = [
    {include-group = "docs"},
    {include-group = "cicd"},
    {include-group = "pytest"},
]
pytest = [
    "allure-pytest",
    "pytest",
    "pytest-clarity",
    "pytest-cov",
    "pytest-html",
    "pytest-memray",
]
docs = [
    "mkdocs", 
    "mkdocs-material[imaging]",
    "mkdocs-git-authors-plugin",
]
cicd = [
    "black", 
    "mypy", 
    "nox", 
    "pre-commit",
]


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
    /(
        \.eggs
      | \.git
      | \.mypy_cache
      | \.pytest_cache
      | \.venv
      | \.vscode
      | \.nox
      | \docs
      # The following are specific to Black, you probably don't want those.
      | blib2to3
      | tests/data
      | profiling
    )/
    '''


[tool.coverage.run]
omit = [
    # omit everything in /docs
    "docs/*",
    # omit this single file
    "noxfile.py",
]


[tool.coverage.report]
exclude_also = [
    # Exclude the following:
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]


[tool.isort]
profile = "black"
force_single_line = "true"
