[project]
name = "myproject"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
authors = ["DestinV <peddky8e@duck.com>"]
license = "MIT"
readme = "README.md"
dependencies = ["loguru", "rich", "typer"]

[project.optional-dependencies]
math = ["numpy"]

[dependency-groups]
dev = [
    { include-group = "docs" },
    { include-group = "cicd" },
    { include-group = "pytest" },
]
pytest = ["allure-pytest", "pytest", "pytest-cov", "pytest-html", "pytest-rich"]
docs = ["zensical", "termynal"]
cicd = ["black", "nox", "pre-commit"]

[tool.black]
line-length = 120

[tool.coverage.run]
omit = [
    "docs/*",     # omit everything in /docs
    "noxfile.py", # omit this single file
]

[tool.isort]
profile = "black"
force_single_line = "true"


